refactor: 优化字符串模板方法 API 使用